// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileNavBar should match snapshot 1`] = `
<GridRow
  centered={true}
  className="profileNavBar"
  columns={4}
  verticalAlign="middle"
>
  <Accordion
    className="profileNavBarBars"
  >
    <AccordionTitle
      active={false}
      onClick={[Function]}
    >
      <Icon
        as="i"
        name="bars"
        size="big"
      />
    </AccordionTitle>
    <AccordionContent
      active={false}
      className="accordionContent"
    >
      <GridColumn
        className="mobile"
        key="PROFILE"
      >
        <ProfileMenu
          count={null}
          menuItem={
            <Image
              as="img"
              className="profileMenuIcon"
              src="test-file-stub"
              ui={true}
            />
          }
          text="PROFILE"
          to="/profile"
        />
      </GridColumn>
      <GridColumn
        className="mobile"
        key="ARTICLES"
      >
        <ProfileMenu
          count="6"
          menuItem={
            <Image
              as="img"
              className="profileMenuIcon"
              src="test-file-stub"
              ui={true}
            />
          }
          text="ARTICLES"
          to="/user-articles"
        />
      </GridColumn>
      <GridColumn
        className="mobile"
        key="FOLLOWERS"
      >
        <ProfileMenu
          count="10"
          menuItem={
            <Image
              as="img"
              className="profileMenuIcon"
              src="test-file-stub"
              ui={true}
            />
          }
          text="FOLLOWERS"
          to="/followers"
        />
      </GridColumn>
      <GridColumn
        className="mobile"
        key="FOLLOWING"
      >
        <ProfileMenu
          count="12"
          menuItem={
            <Image
              as="img"
              className="profileMenuIcon"
              src="test-file-stub"
              ui={true}
            />
          }
          text="FOLLOWING"
          to="/following"
        />
      </GridColumn>
    </AccordionContent>
  </Accordion>
  <GridColumn
    className="desktop"
    key="PROFILE"
  >
    <ProfileMenu
      count={null}
      menuItem={
        <Image
          as="img"
          className="profileMenuIcon"
          src="test-file-stub"
          ui={true}
        />
      }
      text="PROFILE"
      to="/profile"
    />
  </GridColumn>
  <GridColumn
    className="desktop"
    key="ARTICLES"
  >
    <ProfileMenu
      count="6"
      menuItem={
        <Image
          as="img"
          className="profileMenuIcon"
          src="test-file-stub"
          ui={true}
        />
      }
      text="ARTICLES"
      to="/user-articles"
    />
  </GridColumn>
  <GridColumn
    className="desktop"
    key="FOLLOWERS"
  >
    <ProfileMenu
      count="10"
      menuItem={
        <Image
          as="img"
          className="profileMenuIcon"
          src="test-file-stub"
          ui={true}
        />
      }
      text="FOLLOWERS"
      to="/followers"
    />
  </GridColumn>
  <GridColumn
    className="desktop"
    key="FOLLOWING"
  >
    <ProfileMenu
      count="12"
      menuItem={
        <Image
          as="img"
          className="profileMenuIcon"
          src="test-file-stub"
          ui={true}
        />
      }
      text="FOLLOWING"
      to="/following"
    />
  </GridColumn>
</GridRow>
`;

exports[`ProfileNavBar should match snapshot 2`] = `
<GridRow
  centered={true}
  className="profileNavBar"
  columns={6}
  verticalAlign="middle"
>
  <Accordion
    className="profileNavBarBars"
  >
    <AccordionTitle
      active={false}
      onClick={[Function]}
    >
      <Icon
        as="i"
        name="bars"
        size="big"
      />
    </AccordionTitle>
    <AccordionContent
      active={false}
      className="accordionContent"
    >
      <GridColumn
        className="mobile"
        key="PROFILE"
      >
        <ProfileMenu
          count={null}
          menuItem={
            <Image
              as="img"
              className="profileMenuIcon"
              src="test-file-stub"
              ui={true}
            />
          }
          text="PROFILE"
          to="/profile"
        />
      </GridColumn>
      <GridColumn
        className="mobile"
        key="BOOKMARKS"
      >
        <ProfileMenu
          count={null}
          menuItem={
            <Image
              as="img"
              className="profileMenuIcon"
              src="test-file-stub"
              ui={true}
            />
          }
          text="BOOKMARKS"
          to="/bookmarks"
        />
      </GridColumn>
      <GridColumn
        className="mobile"
        key="ARTICLES"
      >
        <ProfileMenu
          count="6"
          menuItem={
            <Image
              as="img"
              className="profileMenuIcon"
              src="test-file-stub"
              ui={true}
            />
          }
          text="ARTICLES"
          to="/user-articles"
        />
      </GridColumn>
      <GridColumn
        className="mobile"
        key="FOLLOWERS"
      >
        <ProfileMenu
          count="10"
          menuItem={
            <Image
              as="img"
              className="profileMenuIcon"
              src="test-file-stub"
              ui={true}
            />
          }
          text="FOLLOWERS"
          to="/followers"
        />
      </GridColumn>
      <GridColumn
        className="mobile"
        key="FOLLOWING"
      >
        <ProfileMenu
          count="12"
          menuItem={
            <Image
              as="img"
              className="profileMenuIcon"
              src="test-file-stub"
              ui={true}
            />
          }
          text="FOLLOWING"
          to="/following"
        />
      </GridColumn>
      <GridColumn
        className="mobile"
        key="SETTINGS"
      >
        <ProfileMenu
          count={null}
          menuItem={
            <Image
              as="img"
              className="profileMenuIcon"
              src="test-file-stub"
              ui={true}
            />
          }
          text="SETTINGS"
          to="/settings"
        />
      </GridColumn>
    </AccordionContent>
  </Accordion>
  <GridColumn
    className="desktop"
    key="PROFILE"
  >
    <ProfileMenu
      count={null}
      menuItem={
        <Image
          as="img"
          className="profileMenuIcon"
          src="test-file-stub"
          ui={true}
        />
      }
      text="PROFILE"
      to="/profile"
    />
  </GridColumn>
  <GridColumn
    className="desktop"
    key="BOOKMARKS"
  >
    <ProfileMenu
      count={null}
      menuItem={
        <Image
          as="img"
          className="profileMenuIcon"
          src="test-file-stub"
          ui={true}
        />
      }
      text="BOOKMARKS"
      to="/bookmarks"
    />
  </GridColumn>
  <GridColumn
    className="desktop"
    key="ARTICLES"
  >
    <ProfileMenu
      count="6"
      menuItem={
        <Image
          as="img"
          className="profileMenuIcon"
          src="test-file-stub"
          ui={true}
        />
      }
      text="ARTICLES"
      to="/user-articles"
    />
  </GridColumn>
  <GridColumn
    className="desktop"
    key="FOLLOWERS"
  >
    <ProfileMenu
      count="10"
      menuItem={
        <Image
          as="img"
          className="profileMenuIcon"
          src="test-file-stub"
          ui={true}
        />
      }
      text="FOLLOWERS"
      to="/followers"
    />
  </GridColumn>
  <GridColumn
    className="desktop"
    key="FOLLOWING"
  >
    <ProfileMenu
      count="12"
      menuItem={
        <Image
          as="img"
          className="profileMenuIcon"
          src="test-file-stub"
          ui={true}
        />
      }
      text="FOLLOWING"
      to="/following"
    />
  </GridColumn>
  <GridColumn
    className="desktop"
    key="SETTINGS"
  >
    <ProfileMenu
      count={null}
      menuItem={
        <Image
          as="img"
          className="profileMenuIcon"
          src="test-file-stub"
          ui={true}
        />
      }
      text="SETTINGS"
      to="/settings"
    />
  </GridColumn>
</GridRow>
`;

exports[`ProfileNavBar should match snapshot 3`] = `
<GridRow
  centered={true}
  className="profileNavBar"
  columns={5}
  verticalAlign="middle"
>
  <Accordion
    className="profileNavBarBars"
  >
    <AccordionTitle
      active={false}
      onClick={[Function]}
    >
      <Icon
        as="i"
        name="bars"
        size="big"
      />
    </AccordionTitle>
    <AccordionContent
      active={false}
      className="accordionContent"
    >
      <GridColumn
        className="mobile"
        key="PROFILE"
      >
        <ProfileMenu
          count={null}
          menuItem={
            <Image
              as="img"
              className="profileMenuIcon"
              src="test-file-stub"
              ui={true}
            />
          }
          text="PROFILE"
          to="/profile"
        />
      </GridColumn>
      <GridColumn
        className="mobile"
        key="ARTICLES"
      >
        <ProfileMenu
          count="6"
          menuItem={
            <Image
              as="img"
              className="profileMenuIcon"
              src="test-file-stub"
              ui={true}
            />
          }
          text="ARTICLES"
          to="/user-articles"
        />
      </GridColumn>
      <GridColumn
        className="mobile"
        key="FOLLOWERS"
      >
        <ProfileMenu
          count="10"
          menuItem={
            <Image
              as="img"
              className="profileMenuIcon"
              src="test-file-stub"
              ui={true}
            />
          }
          text="FOLLOWERS"
          to="/followers"
        />
      </GridColumn>
      <GridColumn
        className="mobile"
        key="FOLLOWING"
      >
        <ProfileMenu
          count="12"
          menuItem={
            <Image
              as="img"
              className="profileMenuIcon"
              src="test-file-stub"
              ui={true}
            />
          }
          text="FOLLOWING"
          to="/following"
        />
      </GridColumn>
      <GridColumn
        className="mobile"
      >
        <ProfileMenu
          count=""
          menuItem={
            <Button
              as="button"
              secondary={true}
            >
              Follow
            </Button>
          }
          text=""
          to=""
        />
      </GridColumn>
    </AccordionContent>
  </Accordion>
  <GridColumn
    className="desktop"
    key="PROFILE"
  >
    <ProfileMenu
      count={null}
      menuItem={
        <Image
          as="img"
          className="profileMenuIcon"
          src="test-file-stub"
          ui={true}
        />
      }
      text="PROFILE"
      to="/profile"
    />
  </GridColumn>
  <GridColumn
    className="desktop"
    key="ARTICLES"
  >
    <ProfileMenu
      count="6"
      menuItem={
        <Image
          as="img"
          className="profileMenuIcon"
          src="test-file-stub"
          ui={true}
        />
      }
      text="ARTICLES"
      to="/user-articles"
    />
  </GridColumn>
  <GridColumn
    className="desktop"
    key="FOLLOWERS"
  >
    <ProfileMenu
      count="10"
      menuItem={
        <Image
          as="img"
          className="profileMenuIcon"
          src="test-file-stub"
          ui={true}
        />
      }
      text="FOLLOWERS"
      to="/followers"
    />
  </GridColumn>
  <GridColumn
    className="desktop"
    key="FOLLOWING"
  >
    <ProfileMenu
      count="12"
      menuItem={
        <Image
          as="img"
          className="profileMenuIcon"
          src="test-file-stub"
          ui={true}
        />
      }
      text="FOLLOWING"
      to="/following"
    />
  </GridColumn>
  <GridColumn
    className="desktop"
  >
    <ProfileMenu
      count=""
      menuItem={
        <Button
          as="button"
          secondary={true}
        >
          Follow
        </Button>
      }
      text=""
      to=""
    />
  </GridColumn>
</GridRow>
`;
